force-app/main/default/objects/Applicant__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DBA</fullName>
            </value>
            <value>
                <fullName>DSOM</fullName>
            </value>
            <value>
                <fullName>IZOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>