force-app/main/default/objects/Applicant__c/fields/Cummulative_Days__c.field-meta.xml
<CustomField>
    <fullName>Cummulative_Days__c</fullName>
    <label>Cummulative Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>