force-app/main/default/objects/Applicant__c/fields/Investment_Category__c.field-meta.xml
<CustomField>
    <fullName>Investment_Category__c</fullName>
    <label>Investment Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BU Services Project</fullName>
            </value>
            <value>
                <fullName>BU Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>